--- a/Maths/index.html
+++ b/Maths/index.html
@@ -19,14 +19,15 @@
             margin: 20px auto;
             max-width: 800px;
             position: relative;
+            z-index: 0;
         }
 
         img {
             max-width: 100%;
             height: auto;
-            aspect-ratio: 3 / 4;
             border: none;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            transition: transform 0.3s ease;
         }
 
         .buttons {
@@ -67,10 +68,6 @@
             width: 24px;
             border: none;
             height: 24px;
-        }
-
-        #pageNumber {
-            margin-top: 20px;
         }
 
         .normal {
@@ -167,10 +164,38 @@
         }
     </style>
     <script>
-        const totalPages = 1;
+        const pageRanges = {
+            1: ["6/1", "8/4"],
+            2: ["9/12", "10/13"],
+            3: ["10/14", "10/20"],
+            4: ["14/1", "14/5"],
+            5: ["15/8", "15/10"],
+            6: ["15/11", "15/16"],
+            7: ["17/1", "18/5"],
+            8: ["18/6", "18/11"],
+            9: ["19/12", "19/15"],
+            10: ["20/17", "21/2"],
+            11: ["21/3", "22/8"],
+            12: ["22/9", "22/12"],
+            13: ["23/1", "23/4"],
+            14: ["30/1", "31/10"],
+            15: ["31/11", "32/17"],
+            16: ["32/20", "35/13"],
+            17: ["35/14", "36/19"],
+            18: ["36/20", "38/1"],
+            19: ["38/2", "39/6"],
+            20: ["39/7", "39/11"],
+            21: ["39/12", "40/18"],
+            22: ["40/19", "40/23"],
+        };
+
+        window.pageRanges = pageRanges
+    </script>
+    <script>
+        const totalPages = 48;
         let currentPage = 1;
         const preloadedImages = [];
-        let imageElement, pageNumberElement, prevButton, nextButton;
+        let imageElement, prevButton, nextButton;
 
         function preloadImages() {
             const preloadRange = 4;
@@ -183,7 +208,7 @@
                 const pageToPreload = currentPage + i;
                 if (pageToPreload > 0 && pageToPreload <= totalPages && !preloadedImages[pageToPreload]) {
                     const img = new Image();
-                    img.src = `pictures/${pageToPreload}.png`;
+                    img.src = `pictures/${pageToPreload}.JPG`;
                     preloadedImages[pageToPreload] = img;
                 }
             }
@@ -202,12 +227,12 @@
                 tempImage.onload = () => {
                     imageElement.src = tempImage.src;
                     imageElement.alt = `Workbook Seite ${currentPage}`;
-                    pageNumberElement.textContent = `Seite ${currentPage} von ${totalPages}`;
 
                     prevButton.disabled = currentPage === 1;
                     nextButton.disabled = currentPage === totalPages;
 
                     loadingOverlay.style.display = 'none';
+                    localStorage.setItem('lastpage', currentPage)
                 };
                 tempImage.onerror = () => {
                     loadingOverlay.style.display = 'none';
@@ -220,7 +245,6 @@
 
         function initializeElements() {
             imageElement = document.getElementById('workbookImage');
-            pageNumberElement = document.getElementById('pageNumber');
             prevButton = document.getElementById('prevButton');
             nextButton = document.getElementById('nextButton');
         }
@@ -233,8 +257,68 @@
             updatePage();
         }
 
+        function taskToNumber(task) {
+            const [chapter, num] = task.split("/").map(Number);
+            return chapter * 1000 + num;
+        }
+
+        function findPageForTask(task) {
+            const t = taskToNumber(task);
+
+            for (const [page, range] of Object.entries(pageRanges)) {
+                const start = taskToNumber(range[0]);
+                const end = taskToNumber(range[1]);
+
+                if (t >= start && t <= end) {
+                    return Number(page);
+                }
+            }
+            return null;
+        }
+
+
+        function goToPage() {
+            const inputEl = document.getElementById('pageInput');
+            const pageInput = inputEl.value.trim();
+
+            if (pageInput.includes("/")) {
+                const page = findPageForTask(pageInput);
+
+                if (page !== null) {
+                    currentPage = page;
+                    preloadImages();
+                    updatePage();
+                } else {
+                    const parts = pageInput.split("/");
+                    if (parts.length === 2 && !isNaN(parts[0])) {
+                        // alles vor dem Slash nehmen
+                        const repaired = parts[0].trim();
+                        document.getElementById('pageInput').value = repaired;
+                        goToPage();
+                        alert(`Diese Aufgabe ist nicht in der Tabelle vorhanden. Du wirst nun auf Seite ${repaired} geleitet`);
+                        return;
+                    }
+                }
+                return;
+            }
+
+            // Fall 2: Normale Seitennummer
+            const newPage = parseInt(pageInput);
+            if (newPage >= 1 && newPage <= totalPages) {
+                currentPage = newPage;
+                preloadImages();
+                updatePage();
+            }
+        }
+
         window.onload = () => {
             initializeElements();
+
+            const lp = localStorage.getItem("lastpage");
+            if (lp) {
+                currentPage = parseInt(lp);
+            }
+
             preloadImages();
             updatePage();
         };
@@ -247,6 +331,15 @@
 
         const supabase = createClient(supabaseUrl, supabaseKey);
 
+        function getBrowserName() {
+            const userAgent = navigator.userAgent;
+            if (userAgent.includes("Firefox")) return "Firefox";
+            if (userAgent.includes("Chrome")) return "Chrome";
+            if (userAgent.includes("Safari")) return "Safari";
+            if (userAgent.includes("Edge")) return "Edge";
+            return "Unknown";
+        }
+
         window.SendAnalyticsStep = async function (action) {
             let user = null;
             try {
@@ -256,7 +349,6 @@
                 user = null;
             }
 
-            // Prüfe, ob die Seite nicht lokal läuft
             const isLocal = window.location.hostname === "127.0.0.1" || window.location.hostname === "localhost";
             if (!isLocal) {
                 try {
@@ -286,12 +378,112 @@
         }
 
         window.SendAnalyticsStep('Website besucht!')
+
+
+
+        let users = [];
+        let founduser = null
+
+        // Funktion zum Laden der Nutzer
+        async function ladeNutzer() {
+            try {
+                const { data, error } = await supabase
+                    .from('users')
+                    .select('username, password, displayname, allowedcookies, bgcolor');
+
+                if (error) {
+                    throw new Error(`Fehler beim Laden der Nutzer: ${error.message}`);
+                }
+
+                users = data || [];
+
+                if (localStorage.getItem('username')) {
+                    users.forEach(function (user) {
+                        if (user.username === localStorage.getItem('username')) {
+                            founduser = user;
+                        }
+                    });
+                }
+
+                wartungsarbeiten()
+
+            } catch (error) {
+                console.log(error)
+            }
+        }
+
+        ladeNutzer()
+
+        async function wartungsarbeiten() {
+            const { data, error } = await supabase
+                .from('general')
+                .select('*')
+                .single();
+
+            if (data.released === false) {
+                let showMaintenance = false;
+                const active = data && data.Wartungsarbeiten;
+
+                if (founduser) {
+                    try {
+                        if (founduser.username === "Paluss1122" && active) {
+                            showMaintenance = false;
+                            document.title = 'Mathe Lösungen';
+                        } else {
+                            document.title = active ? `Wartungsarbeiten (bis ${data.WartungsarbeitenZeit})` : "Dashboard";
+                            showMaintenance = active;
+                        }
+                    } catch (e) {
+                        document.title = active ? `Wartungsarbeiten (bis ${data.WartungsarbeitenZeit})` : "Dashboard";
+                        console.error("Fehler beim Parsen des Benutzers:", e);
+                        showMaintenance = active;
+                    }
+                } else if (localStorage.getItem('username')) {
+                    if (localStorage.getItem('username') === "Paluss1122" && active) {
+                        showMaintenance = false;
+                        document.title = 'Mathe Lösungen';
+                    } else {
+                        document.title = active ? `Wartungsarbeiten (bis ${data.WartungsarbeitenZeit})` : "Dashboard";
+                        showMaintenance = active;
+                    }
+                } else {
+                    document.title = active ? `Wartungsarbeiten (bis ${data.WartungsarbeitenZeit})` : "Dashboard";
+                    showMaintenance = active;
+                }
+
+                const maintenanceFrame = document.getElementById("maintenance-frame");
+                if (maintenanceFrame) {
+                    if (showMaintenance === true) {
+                        maintenanceFrame.style.display = 'flex';
+                        maintenanceFrame.style.opacity = '1';
+                    } else {
+                        maintenanceFrame.style.opacity = '1';
+                        setTimeout(() => {
+                            maintenanceFrame.style.display = 'none';
+                        }, 1000);
+                    }
+                }
+
+                document.getElementById("time-ws").innerText = data.WartungsarbeitenZeit;
+                document.getElementById("why-ws").innerText = data.Grund;
+            }
+        }
     </script>
 </head>
 
 <body>
+    <div id="maintenance-frame"
+        style="display:none; position:fixed; top:0; left:0; width:100vw; height:100vh; background:rgba(0,0,0,1); 
+        color:white; z-index:999999; align-items:center; justify-content:center; flex-direction:column; font-size:2em; opacity: 0; transition: opacity 1s;">
+        <div style="width: 100%; text-align: center;">
+            <h1 style="width: 100%;; font-size:xx-large">⚠️ Wartungsarbeiten</h1>
+            <p style="width: 100%;">Aktuell finden Wartungsarbeiten statt!</p>
+            <p style="width: 100%;">Vorraussichtliche Dauer: <span id="time-ws"></span></p>
+            <p style="width: 100%;">Grund: <span id="why-ws"></span></p>
+        </div>
+    </div>
     <button onclick="window.location = 'https://solutions-dashboard-8.netlify.app'"
-        style="position: fixed; width: 20%; left: 1%; top: 1%; height: auto; background: none; border: none; cursor: pointer; box-shadow: none;">
+        style="position: fixed; width: 20%; left: 1%; top: 1%; height: auto; background: none; border: none; cursor: pointer; box-shadow: none;; z-index: 10000000">
         <img src="arrow-left.png" alt="Zurück"
             style="width: 100%; height: auto; border: none; aspect-ratio: 1; box-shadow: none;">
     </button>
@@ -302,7 +494,7 @@
 
     <div class="container" id="container">
         <h1>Mathe Lösungen</h1>
-        <img id="workbookImage" src="pictures/1.png" alt="Workbook Seite 1">
+        <img id="workbookImage" src="pictures/1.jpg" alt="Workbook Seite 1">
         <div class="buttons">
             <button id="prevButton" onclick="changePage(-1)" disabled>
                 <img src="arrow-left.png" alt="Zurück">
@@ -311,16 +503,37 @@
                 <img src="arrow-right.png" alt="Weiter">
             </button>
         </div>
-        <p id="pageNumber">Seite 1 von 1</p>
-        
+
         <div class="manual-navigation">
-            <input class="normal" style="width: 20%;" type="number" id="pageInput" min="1" max="1"
-                placeholder="Seite eingeben">
+            <input class="normal" style="width: 90%;" type="text" id="pageInput" min="1" max="48"
+                placeholder="Seite/Aufgabe eingeben (zb 19/1)">
             <button class="normal"
                 style="display: block; left: 50%; position: relative; transform: translate(-50%); width: auto; margin-top: 5px; margin-bottom: 5px; cursor: pointer;"
                 onclick="goToPage()">Wechseln</button>
         </div>
     </div>
+    <script>
+        function checkAccess() {
+            const username = localStorage.getItem('loggedInUser_Paluss1122_sdb');
+            if (!username) {
+                document.body.innerHTML = `
+          <div class="access-denied">
+            <h1>🚫 Zugang verweigert</h1>
+            <p>Du hast keine Berechtigung, diese Seite zu besuchen.</p>
+            <p>Du musst angemeldet sein!</p>
+            <p>Aktueller Benutzer: ${username || 'Nicht angemeldet'}</p>
+          </div>
+        `;
+                return false;
+            }
+            return true;
+        }
+
+        // Zugangskontrolle beim Laden der Seite
+        if (!checkAccess()) {
+          throw new Error('Zugang verweigert');
+        }
+    </script>
 </body>
 
 </html>
