--- a/index.html
+++ b/index.html
@@ -277,8 +277,7 @@
             style='transform: scale(1); position: fixed; top: 0; transform-origin: 50% 0%; opacity: 1;'>Solutions
             Dashboard 8</p>
         <p class='countdown-title' style="opacity: 1; transform: scale(1); font-size: 3em; margin-bottom: 30px">
-            Sorry,
-            we are currently waiting for our delivery...</p>
+            We need time...</p>
         <p class='countdown-title' id="cd"
             style="opacity: 0; transform: scale(1); transition: opacity 3s !important; box-shadow: 0 0 15px orange; border-radius: 30px; padding: 10px;">
             0d 0h 0m 0s</p>
