--- a/Latein/index.html
+++ b/Latein/index.html
@@ -417,7 +417,7 @@
     </div>
     <script>
         function checkAccess() {
-            const username = localStorage.getItem('loggedInUser_Paluss1122_sdb');
+            const username = localStorage.getItem('username');
             if (!username) {
                 document.body.innerHTML = `
           <div class="access-denied">
