--- a/Maths/index.html
+++ b/Maths/index.html
@@ -187,6 +187,37 @@
             20: ["39/7", "39/11"],
             21: ["39/12", "40/18"],
             22: ["40/19", "40/23"],
+            23: ["40/24", "43/2"],
+            24: ["43/3", "43/6"],
+            25: ["43/9", "44/12"],
+            26: ["44/13", "45/23"],
+            27: ["48/1", "49/11"],
+            28: ["49/12", "50/4"],
+            29: ["50/5", "51/11"],
+            30: ["51/13", "52/19"],
+            31: ["52/20", "53/4"],
+            32: ["60/1", "61/3"],
+            33: ["61/4", "61/5"],
+            34: ["61/8", "61/10"],
+            35: ["62/11", "62/14"],
+            36: ["65/1", "66/3"],
+            37: ["66/44", "67/14"],
+            38: ["67/16", "70/1"],
+            39: ["70/2", "70/7"],
+            40: ["70/8", "71/10"],
+            41: ["71/13", "74/3"],
+            42: ["74/4", "76/3"],
+            43: ["77/4", "77/5"],
+            44: ["77/6", "78/9"],
+            45: ["78/10", "78/12"],
+            46: ["79/1", "79/4"],
+            47: ["86/1", "87/10"],
+            48: ["87/11", "87/16"],
+            49: ["87/17", "89/8"],
+            50: ["89/11", "92/3"],
+            51: ["92/4", "96/2"],
+            52: ["96/3", "96/4"],
+            53: ["96/7", "97/12"],
         };
 
         window.pageRanges = pageRanges
@@ -514,7 +545,7 @@
     </div>
     <script>
         function checkAccess() {
-            const username = localStorage.getItem('loggedInUser_Paluss1122_sdb');
+            const username = localStorage.getItem('username');
             if (!username) {
                 document.body.innerHTML = `
           <div class="access-denied">
@@ -531,7 +562,7 @@
 
         // Zugangskontrolle beim Laden der Seite
         if (!checkAccess()) {
-          throw new Error('Zugang verweigert');
+            throw new Error('Zugang verweigert');
         }
     </script>
 </body>
