--- a/index.html
+++ b/index.html
@@ -291,6 +291,10 @@
         </h1>
 
         <div class='link-container' id='link-container'>
+            <h3 id='maths'><u>Kalender</u></h3>
+
+            <a href='Calender/index.html'><span>Alle anstehenden IKG Ereignisse</span></a>
+
             <h3 id='maths'><u>Mathe Lösungen</u></h3>
 
             <a href='Maths/index.html'><span>Alle Lösungen</span></a>
