--- a/Maths/index.html
+++ b/Maths/index.html
@@ -31,18 +31,20 @@
         }
 
         .buttons {
-            position: absolute;
-            top: 50%;
+            position: fixed;
+            bottom: 0%;
             width: 100%;
+            max-width: 800px;
             display: flex;
             justify-content: space-between;
-            transform: translateY(-50%);
+            left: 50%;
+            transform: translate(-50%, -20%);
         }
 
         .buttons button {
-            padding: 10px;
-            border: none;
-            border-radius: 50%;
+            padding: 11px 20px;
+            border: white 2px solid;
+            border-radius: 20px;
             cursor: pointer;
             background-color: rgba(0, 0, 0, 0.5);
             transition: background-color 0.3s ease;
@@ -53,6 +55,7 @@
             transform-origin: center;
             margin-left: 10px;
             margin-right: 10px;
+            color: white;
         }
 
         .buttons button:hover {
@@ -513,6 +516,28 @@
             <p style="width: 100%;">Grund: <span id="why-ws"></span></p>
         </div>
     </div>
+
+    <div id='tutorial-content' style='position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%); 
+        background: #2d2d2d; border-radius: 20px; padding: 30px; max-width: 500px; text-align: 
+        center; color: white; z-index: 999999; display: none;transition: opacity 1s; opacity: 1;'>
+        <h2 id='tutorial-title' style='margin-bottom: 20px; color: #ff6b6b; margin-top: 0;'>
+            Bestätigung
+        </h2>
+
+        <p id='tutorial-text' style='font-size: 18px; line-height: 1.5; margin-bottom: 25px;'>
+            Bestätige bitte hiermiet, dass du keine Screenshots machst, wenn doch du Zugang verlierst für immer
+        </p>
+
+        <div style='display: flex; justify-content: center; gap: 10px;'>
+            <button id='tutorial-next'
+                onclick='document.getElementById("tutorial-content").remove(); localStorage.setItem("agreed_noscreens", true)'
+                style='padding: 10px 20px; background: #ff6b6b; color: white; 
+                border: none; border-radius: 10px; cursor: pointer; font-size: 16px;'>
+                Bestätigen
+            </button>
+        </div>
+    </div>
+
     <button onclick="window.location = 'https://solutions-dashboard-8.netlify.app'"
         style="position: fixed; width: 20%; left: 1%; top: 1%; height: auto; background: none; border: none; cursor: pointer; box-shadow: none;; z-index: 10000000">
         <img src="arrow-left.png" alt="Zurück"
@@ -526,22 +551,22 @@
     <div class="container" id="container">
         <h1>Mathe Lösungen</h1>
         <img id="workbookImage" src="pictures/1.jpg" alt="Workbook Seite 1">
-        <div class="buttons">
-            <button id="prevButton" onclick="changePage(-1)" disabled>
-                <img src="arrow-left.png" alt="Zurück">
-            </button>
-            <button id="nextButton" onclick="changePage(1)">
-                <img src="arrow-right.png" alt="Weiter">
-            </button>
-        </div>
 
         <div class="manual-navigation">
             <input class="normal" style="width: 90%;" type="text" id="pageInput" min="1" max="48"
-                placeholder="Seite/Aufgabe eingeben (zb 19/1)">
+                placeholder="Seite/Aufgabe eingeben (zb 19/1)" onkeydown="if(event.key === 'Enter') goToPage()">
             <button class="normal"
                 style="display: block; left: 50%; position: relative; transform: translate(-50%); width: auto; margin-top: 5px; margin-bottom: 5px; cursor: pointer;"
                 onclick="goToPage()">Wechseln</button>
         </div>
+    </div>
+    <div class="buttons">
+        <button id="prevButton" onclick="changePage(-1)" disabled>
+            Zurück
+        </button>
+        <button id="nextButton" onclick="changePage(1)">
+            Weiter
+        </button>
     </div>
     <script>
         function checkAccess() {
@@ -563,6 +588,26 @@
         // Zugangskontrolle beim Laden der Seite
         if (!checkAccess()) {
             throw new Error('Zugang verweigert');
+        }
+    </script>
+    <script>
+        const workbookImage = document.getElementById('workbookImage');
+
+        // Rechtsklick verhindern
+        workbookImage.addEventListener('contextmenu', (e) => {
+            e.preventDefault();
+        });
+
+        // Lange Berührung / Drag verhindern
+        workbookImage.addEventListener('mousedown', (e) => {
+            e.preventDefault();
+        });
+        workbookImage.addEventListener('touchstart', (e) => {
+            e.preventDefault();
+        });
+
+        if (!localStorage.getItem("agreed_noscreens")) {
+            document.getElementById('tutorial-content').style.display = 'block'
         }
     </script>
 </body>
