Ready for Publish

--- a/Maths/index.html
+++ b/Maths/index.html
@@ -553,7 +553,7 @@
         <img id="workbookImage" src="pictures/1.jpg" alt="Workbook Seite 1">
 
         <div class="manual-navigation">
-            <input class="normal" style="width: 90%;" type="text" id="pageInput" min="1" max="48"
+            <input class="normal" style="width: 90%;" type="text" id="pageInput"
                 placeholder="Seite/Aufgabe eingeben (zb 19/1)" onkeydown="if(event.key === 'Enter') goToPage()">
             <button class="normal"
                 style="display: block; left: 50%; position: relative; transform: translate(-50%); width: auto; margin-top: 5px; margin-bottom: 5px; cursor: pointer;"
