--- a/index.html
+++ b/index.html
@@ -457,6 +457,8 @@
         </button>
     </div>
 
+    <div id="scroll-extra"></div>
+
     <script type='module' src="Files/Module/index-module.js"></script>
     <script src="Files/Default/index.js"></script>
 
