Added copyCredentials function

--- a/Calender/index.html
+++ b/Calender/index.html
@@ -265,7 +265,7 @@
 
         async function loadCalendar() {
             const content = document.getElementById('content');
-            content.innerHTML = '<div class="loading">Lade Kalender...</div>';
+            content.innerHTML = '<div class="loading">Lade Kalender... (max 20s)</div>';
 
             try {
                 // CORS-Proxy verwenden, um das CORS-Problem zu umgehen
