--- a/index.html
+++ b/index.html
@@ -291,9 +291,9 @@
         </h1>
 
         <div class='link-container' id='link-container'>
-            <h3 id='maths'><u>Kalender</u></h3>
+            <h3 id='calender'><u>Kalender</u></h3>
 
-            <a href='Calender/index.html'><span>Alle anstehenden IKG Ereignisse</span></a>
+            <a href='Calender/index.html' id="ca"><span>Alle anstehenden IKG Ereignisse</span></a>
 
             <h3 id='maths'><u>Mathe Lösungen</u></h3>
 
@@ -303,7 +303,7 @@
 
             <a href='Latein/index.html' id='latein'><span>Latein Vokabeln</span></a>
 
-            <h3 id='device-infos-text'><u>Hausaufgaben Organisieren</u></h3>
+            <h3 id='homework-editor-text'><u>Hausaufgaben Organisieren</u></h3>
 
             <a href='https://homework-editor.netlify.app/' id='he' target="_blank"><span>Hausaufgaben Editor</span></a>
 
