fixed depracted imports from supabase

--- a/Admin/analytics.html
+++ b/Admin/analytics.html
@@ -27,7 +27,7 @@
     .access-denied h1 { color: #721c24; margin-bottom: 20px; }
   </style>
   <script type="module">
-    import { createClient } from "https://cdn.jsdelivr.net/npm/@supabase/supabase-js/+esm";
+    import { createClient } from "https://esm.sh/@supabase/supabase-js@2";
 
     // Zugangskontrolle
     function checkAccess() {
