--- a/Admin/user-management.html
+++ b/Admin/user-management.html
@@ -410,7 +410,7 @@ Website: solutiosn-dashboard-8.netlify.app`;
   </div>
 
   <script type="module">
-    import { createClient } from "https://cdn.jsdelivr.net/npm/@supabase/supabase-js/+esm";
+    import { createClient } from "https://esm.sh/@supabase/supabase-js@2";
 
     // Zugangskontrolle
     function checkAccess() {
