--- a/Admin/settings.html
+++ b/Admin/settings.html
@@ -426,7 +426,7 @@
     </div>
 
     <script type="module">
-        import { createClient } from "https://cdn.jsdelivr.net/npm/@supabase/supabase-js/+esm";
+        import { createClient } from "https://esm.sh/@supabase/supabase-js@2";
 
         // Zugangskontrolle
         function checkAccess() {
