--- a/Admin/analytics.html
+++ b/Admin/analytics.html
@@ -36,8 +36,7 @@
         document.body.innerHTML = `
           <div class="access-denied">
             <h1>🚫 Zugang verweigert</h1>
-            <p>Sie haben keine Berechtigung, diese Seite zu besuchen.</p>
-            <p>Benötigter Benutzer: Paluss1122</p>
+            <p>Du hast keine Berechtigung, diese Seite zu besuchen.</p>
             <p>Aktueller Benutzer: ${username || 'Nicht angemeldet'}</p>
           </div>
         `;
@@ -48,7 +47,7 @@
 
     // Supabase Config
     const supabaseUrl = "https://empsgwnjxxhzyudvxyxg.supabase.co";
-    const supabaseKey = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImVtcHNnd25qeHhoenl1ZHZ4eXhnIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTM3MTI2NzUsImV4cCI6MjA2OTI4ODY3NX0.WvGmXzoIojeiM8l1GN_e9iRq5C5G2AURiyy96NLjnhE";
+    const supabaseKey = "sb_publishable_aTwBvGnNtosusrlawR6rHQ_anwwpfR6";
     const supabase = createClient(supabaseUrl, supabaseKey);
 
     async function ladeAnalytics() {
