--- a/Admin/analytics.html
+++ b/Admin/analytics.html
@@ -52,50 +52,30 @@
     import { createClient } from "https://esm.sh/@supabase/supabase-js@2";
     import { supabaseKey } from "./config.js";
 
-    // Zugangskontrolle
-    async function checkAccess() {
-      const username = localStorage.getItem('username');
-      const password = localStorage.getItem('password');
-      if (!username) {
-        document.body.innerHTML = `<div class="access-denied"> 
-          <h1>🚫 Zugang verweigert</h1> 
-          <p>Du hast keine Berechtigung, diese Seite zu besuchen.</p>
-          </div>`;
-        return false;
-      }
-      try {
-        const { data, error } =
-          await supabase.functions.invoke('isAdmin', { body: { localusername: username, password: password }, })
-        if (!data.valid) {
-          document.body.innerHTML = `<div class="access-denied"> 
-            <h1>🚫 Zugang verweigert</h1> 
-            <p>Du hast keine Berechtigung, diese Seite zu besuchen.</p>
-            </div>`;
-          return false;
-        }
-        return true;
-      }
-      catch {
-        document.body.innerHTML =
-          `<div class="access-denied">
-            <h1>⚠️ Fehler</h1>
-            <p>Überprüfung nicht möglich.</p>
-          </div>`; return false;
-      }
-    }
-
     async function ladeAnalytics() {
       const container = document.getElementById("besuche");
-      container.innerHTML = "Lade Analytics-Daten...";
+      container.innerHTML = "Lade Daten...";
+
+      const username = localStorage.getItem("username");
+      const password = localStorage.getItem("password");
 
       try {
-        const res = await fetch("/./.netlify/functions/get-analytics");
-        const data = await res.json();
+        const res = await fetch("/.netlify/functions/get-analytics", {
+          method: "POST",
+          headers: { "Content-Type": "application/json" },
+          body: JSON.stringify({ username, password })
+        });
 
-        if (!Array.isArray(data)) {
-          container.innerHTML = "Fehler beim Laden";
+        if (res.status === 403 || res.status === 401) {
+          document.body.innerHTML = `
+        <div class="access-denied">
+          <h1>🚫 Zugang verweigert</h1>
+          <p>Keine Berechtigung.</p>
+        </div>`;
           return;
         }
+
+        const data = await res.json();
 
         container.innerHTML = "";
         data.forEach(entry => {
@@ -104,16 +84,13 @@
           div.innerHTML = `
         <p><strong>ID:</strong> ${entry.id}</p>
         <p>🕓 Zeit: ${entry.zeit || entry.datum}</p>
-        <p>🧭 Browser: ${entry.browser}</p>
-        <p>📱 Gerät: ${entry.device}</p>
-        <p>🌐 Website: ${entry.link}</p>
         <p>👤 Person: ${entry.username}</p>
         <p>⚡ Aktion: ${entry.action}</p>
       `;
           container.appendChild(div);
         });
 
-      } catch (e) {
+      } catch {
         container.innerHTML = "Serverfehler";
       }
     }
