--- a/Admin/analytics.html
+++ b/Admin/analytics.html
@@ -50,7 +50,6 @@
   </style>
   <script type="module">
     import { createClient } from "https://esm.sh/@supabase/supabase-js@2";
-    import { supabaseKey } from "./config.js";
 
     async function ladeAnalytics() {
       const container = document.getElementById("besuche");
@@ -60,7 +59,7 @@
       const password = localStorage.getItem("password");
 
       try {
-        const res = await fetch("/.netlify/functions/get-analytics", {
+        const res = await fetch("/./.netlify/functions/get-analytics", {
           method: "POST",
           headers: { "Content-Type": "application/json" },
           body: JSON.stringify({ username, password })
